# Quiz-System

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  build.sbt  build.sc
backend/app/controllers/: QuizController.scala
backend/app/models/: Question.scala  QuestionOption.scala
backend/app/repositories/: QuestionRepository.scala
backend/app/utils/: AppConfig.scala
backend/conf/: application.conf  routes
backend/project/: plugins.sbt
backend/test/controllers/: QuizControllerSpec.scala
frontend/: README.md  index.html  package.json  tsconfig.json
frontend/src/: App.vue  api.ts
frontend/src/router/: index.ts
frontend/src/views/: CreateQuestion.vue  QuestionDetail.vue  QuestionList.vue
question_extrator/: .coverage  .flake8  Makefile  README.md  pyproject.toml
question_extrator/mocks/: mock_awser.txt  prova_primeira_etapa_texto.txt
question_extrator/question_extrator/parser_correcly_options/: __init__.py  parser_correcly_options.py
question_extrator/question_extrator/parser_question/: __init__.py  parser_question.py
question_extrator/question_extrator/question_prepare/: __init__.py  question_prepare.py
question_extrator/question_extrator/types/: __init__.py
question_extrator/question_extrator/types/option_type/: __init__.py
question_extrator/question_extrator/types/question_type/: __init__.py
question_extrator/tests/: test_parser.py  test_parser_options.py  test_question_prepare.py
