[tool.poetry]
name = "question-extrator"
version = "0.1.0"
description = ""
authors = ["nbo2001 <natanael.oliveira@jusbrasil.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.14.0"
pytest = "^8.3.4"
blue = "^0.9.1"
isort = "^5.13.2"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules -x --cov=question_extrator -vv"


[tool.isort]
profile = "black"
line_length = 79